--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,14 +12,15 @@
   <script src="lib/jasmine-2.3.4/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="src/Thermostat.js"></script>
+  <script src="src/thermostat.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/SpecHelper.js"></script>
-  <script src="spec/ThermostatSpec.js"></script>
+  <script src="spec/thermostatSpec.js"></script>
 
 </head>
 
 <body>
+
 </body>
 </html>
