Used a constant for default temp - not sure if it's necessary

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 
 </head>
 <body>
-  <div id="container">
-    <div><span id="temperature"></span>°C</div>
+  <article>
+    <section><span class="temperature"></span>°C</section>
     <button id="increase_button" type="button" background-color="blue">Increase</button>
     <button id="decrease_button" type="button">Decrease</button>
     <button id="reset_button" type="button">Reset</button>
     <form>Power Saving Mode<input id="power_saving_mode" type="checkbox" checked></form>
-  </div>
-  </body>
+  </article>
+
   <script src="src/Thermostat.js"></script>
   <script src="src/app.js"></script>
 </body>
