--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text.css" href="css/thermostat.css">
 
+  <!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script> -->
+
 </head>
 <body>
   <article>
@@ -13,14 +15,13 @@
     <button id="increase_button" type="button">Increase</button>
     <button id="decrease_button" type="button">Decrease</button>
     <button id="reset_button" type="button">Reset</button>
-  </article>
     <div class="wrap">
-      <label for="unchecked" class="lbl"></label>
+
       <input type="checkbox" id="unchecked" class="cbx hidden"/>
+      <label for="unchecked" class="lbl">Power Saving Mode</label>
     </div>
-
-
-  <script src="src/Thermostat.js"></script>
+  </article>
+  <script src="src/thermostat.js"></script>
   <script src="src/app.js"></script>
 </body>
 </html>
