--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Thermostat</title>
+  <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text.css" href="css/thermostat.css">
 
@@ -15,11 +16,9 @@
     <button id="increase_button" type="button">Increase</button>
     <button id="decrease_button" type="button">Decrease</button>
     <button id="reset_button" type="button">Reset</button>
-    <div class="wrap">
-
-      <input type="checkbox" id="unchecked" class="cbx hidden"/>
-      <label for="unchecked" class="lbl">Power Saving Mode</label>
-    </div>
+    <input name="power_saving_mode" type="checkbox" id="unchecked" class="cbx hidden" checked/>
+    <label for="unchecked" class="lbl"></label>
+    <h3>Power Saving Mode</h3>
   </article>
   <script src="src/thermostat.js"></script>
   <script src="src/app.js"></script>
