JavaScript version of app complete - removed references to ids

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 </head>
 <body>
   <article>
-    <section><span id="temperature"></span>°C</section>
-    <button id="increase_button" type="button">Increase</button>
-    <button id="decrease_button" type="button">Decrease</button>
-    <button id="reset_button" type="button">Reset</button>
-    <input name="power_saving_mode" type="checkbox" id="unchecked" class="cbx hidden" checked/>
+    <section><span class="temperature"></span>°C</section>
+    <button type="button">Increase</button>
+    <button type="button">Decrease</button>
+    <button type="button">Reset</button>
+    <input name="power_saving_mode" type="checkbox" class="cbx hidden" id="unchecked" checked/>
     <label for="unchecked" class="lbl"></label>
     <h3>Power Saving Mode</h3>
   </article>
