Added basic jquery functionality

--- a/index.html
+++ b/index.html
@@ -7,20 +7,21 @@
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text.css" href="css/thermostat.css">
 
-  <!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script> -->
+
 
 </head>
 <body>
   <article>
     <section><span class="temperature"></span>°C</section>
-    <button type="button">Increase</button>
-    <button type="button">Decrease</button>
-    <button type="button">Reset</button>
+    <button class="increase" type="button">Increase</button>
+    <button class="decrease" type="button">Decrease</button>
+    <button class="reset" type="button">Reset</button>
     <input name="power_saving_mode" type="checkbox" class="cbx hidden" id="unchecked" checked/>
     <label for="unchecked" class="lbl"></label>
     <h3>Power Saving Mode</h3>
   </article>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="src/thermostat.js"></script>
-  <script src="src/app.js"></script>
+  <script src="src/app_jquery.js"></script>
 </body>
 </html>
