Jquery colour change working with classes

--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
   <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text.css" href="css/thermostat.css">
-
-
-
 </head>
 <body>
   <article>
@@ -21,7 +18,7 @@
     <h3>Power Saving Mode</h3>
   </article>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-  <script src="src/thermostat.js"></script>
-  <script src="src/app_jquery.js"></script>
+  <script type="text/javascript" src="src/thermostat.js"></script>
+  <script type="text/javascript" src="src/app_jquery.js"></script>
 </body>
 </html>
