--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -10,6 +10,8 @@
   <script src="lib/jasmine-2.3.4/jasmine.js"></script>
   <script src="lib/jasmine-2.3.4/jasmine-html.js"></script>
   <script src="lib/jasmine-2.3.4/boot.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+  <script src="lib/jasmine-2.3.4/jasmine-jquery.js"></script>
 
   <!-- include source files here... -->
   <script src="src/thermostat.js"></script>
@@ -17,7 +19,7 @@
   <!-- include spec files here... -->
   <script src="spec/SpecHelper.js"></script>
   <script src="spec/thermostatSpec.js"></script>
-
+  <script src="spec/featureSpec.js"></script>
 </head>
 
 <body>
