--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <input name="power_saving_mode" type="checkbox" class="cbx hidden" id="unchecked" checked/>
     <label for="unchecked" class="lbl"></label>
     <h3>Power Saving Mode</h3>
+    <button class="get_weather">Today's Weather</button>
+    <section class="weather"></section>
   </article>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script type="text/javascript" src="src/thermostat.js"></script>
