First part of api call done - need to jquery-fy things and allow for any city

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <label for="unchecked" class="lbl"></label>
     <h3>Power Saving Mode</h3>
     <button class="get_weather">Today's Weather</button>
+    <!--For the input box - maybe use a form? -->
     <section class="weather"></section>
   </article>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
