Written feature tests for jquery

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!--For the input box - maybe use a form? -->
     <section class="weather"></section>
   </article>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+  <script type="text/javascript" src="lib/jquery-2.1.4.min.js"></script>
   <script type="text/javascript" src="src/thermostat.js"></script>
   <script type="text/javascript" src="src/app_jquery.js"></script>
 </body>
