--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -10,8 +11,9 @@
   <script src="lib/jasmine-2.3.4/jasmine.js"></script>
   <script src="lib/jasmine-2.3.4/jasmine-html.js"></script>
   <script src="lib/jasmine-2.3.4/boot.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-  <script src="lib/jasmine-2.3.4/jasmine-jquery.js"></script>
+  <script type="text/javascript" src="lib/jquery-2.1.4.min.js"></script>
+  <script type="text/javascript" src="spec/hold.js"></script>
+  <script src="lib/jasmine-jquery.js"></script>
 
   <!-- include source files here... -->
   <script src="src/thermostat.js"></script>
