Refactored AJAX request - added temperature

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <button class="get_weather">Today's Weather</button>
     <!--For the input box - maybe use a form? -->
     <section class="weather"></section>
+    <section class="weather_temp"></section>
   </article>
   <script type="text/javascript" src="lib/jquery-2.1.4.min.js"></script>
   <script type="text/javascript" src="src/thermostat.js"></script>
