Added image to AJAX request

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <!--For the input box - maybe use a form? -->
     <section class="weather"></section>
     <section class="weather_temp"></section>
+    <section class="weather_image"></section>
   </article>
   <script type="text/javascript" src="lib/jquery-2.1.4.min.js"></script>
   <script type="text/javascript" src="src/thermostat.js"></script>
