Refactored textbox to highlight on click

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <input name="power_saving_mode" type="checkbox" class="cbx hidden" id="unchecked" checked/>
     <label for="unchecked" class="lbl"></label>
     <h3>Power Saving Mode</h3>
-    <input name="city" type="text" value="Enter your city">
-    <button class="get_weather">Get today's weather</button>
+    <input name="city" type="text" value="Enter your city" onclick="this.select()">
+    <button class="get_weather">Get current weather</button>
     <section class="weather"></section>
     <section class="weather_temp"></section>
     <section class="weather_image"></section>
